Fix package json

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "bugs": {
     "url": "https://github.com/joarwilk/gql2flow/issues"
   },
-  "homepage": "https://github.com/joarwilk/gql2flow#readme",
+  "homepage": "https://github.com/joarwilk/gql2flow#readme"
 }
