--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Convert a GraphQL Schema to a Flowtype definition",
   "main": "index.js",
   "dependencies": {
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "is-url": "^1.2.2",
+    "node-fetch": "^1.6.3"
   },
   "devDependencies": {
     "@types/graphql": "^0.7.1",
     "@types/node": "^6.0.45",
     "chai": "^3.5.0",
-    "graphql": "^0.7.2",
+    "graphql": "^0.9.6",
     "mocha": "^2.4.5"
   },
   "scripts": {
